--- a/COPIA/estilos4sfgcat.css
+++ b/COPIA/estilos4sfgcat.css
@@ -939,6 +939,7 @@ nav a:hover {
 
 #chatbot-container {
     position: fixed;
+    top:40px;
     bottom: 90px;
     right: 20px;
     width: 360px;
@@ -1287,11 +1288,11 @@ nav a {
 }
 
 #chatbot-container {
-    bottom: 0;
+    bottom: 5;  /* Esto estaba a 0 y lo he puesto a 5 */
     right: 0;
     left: 0;
     width: 100%;
-    height: 100vh;
+    height: 85vh; /*Esto estaba en 100 pero entonces o no se veía el título o no podía introducir texto */
     border-radius: 0;
     max-height: 100vh;
 }
