--- a/estilos4sfgcat.css
+++ b/estilos4sfgcat.css
@@ -2481,13 +2481,13 @@ body.dark-mode .mobile-nav-item.active {
     }
 
     .logo img {
-        width: 150px !important;
+        width: 180px !important;
         height: auto !important;
    }
 
     .logo {
         font-size: 1.1rem;
-        margin-left: -20px !important;
+        margin-left: -30px !important;
     }
 
     footer {
@@ -2499,8 +2499,8 @@ body.dark-mode .mobile-nav-item.active {
         padding: 0.2rem 0.5rem !important;
         font-size: 1rem !important;
         min-width: 30px !important;
-        min-height: 50px !important;
-        border: 5px solid purple !important;
+        min-height: 40px !important;
+        /*border: 5px solid purple !important;*/
     }
     
     .dark-mode-btn {
@@ -2511,7 +2511,7 @@ body.dark-mode .mobile-nav-item.active {
         padding: 0.4rem !important;
         font-size: 1rem !important;
         order: 2 !important;
-        border: 5px solid yellow !important;
+        /*border: 5px solid yellow !important;*/
 
     }
 
