--- a/estilos4sfgcat.css
+++ b/estilos4sfgcat.css
@@ -2488,6 +2488,8 @@ body.dark-mode .mobile-nav-item.active {
     .logo {
         font-size: 1.1rem;
         margin-left: -30px !important;
+        margin-right: 30px;
+        padding: 0px 0px;
     }
 
     footer {
