--- a/estilos4sfgcat.css
+++ b/estilos4sfgcat.css
@@ -2488,8 +2488,8 @@ body.dark-mode .mobile-nav-item.active {
     .logo {
         font-size: 1.1rem;
         margin-left: -30px !important;
-        margin-right: 30px;
-        padding: 0px 0px;
+        margin-right: 0px !important;
+        padding: 0px 0px !important;
     }
 
     footer {
@@ -2501,7 +2501,7 @@ body.dark-mode .mobile-nav-item.active {
         padding: 0.2rem 0.5rem !important;
         font-size: 1rem !important;
         min-width: 30px !important;
-        min-height: 40px !important;
+        min-height: 25px !important;
         /*border: 5px solid purple !important;*/
     }
     
