--- a/estilos4sfgcat.css
+++ b/estilos4sfgcat.css
@@ -2501,7 +2501,8 @@ body.dark-mode .mobile-nav-item.active {
         padding: 0.2rem 0.5rem !important;
         font-size: 1rem !important;
         min-width: 30px !important;
-        min-height: 25px !important;
+        min-height: 30px !important;
+        margin-right: 0px !important;
         /*border: 5px solid purple !important;*/
     }
     
