--- a/estilos4sfgcat.css
+++ b/estilos4sfgcat.css
@@ -2478,7 +2478,7 @@ body.dark-mode .mobile-nav-item.active {
 
     .header-controls{
         display: flex !important;
-        gap:5px !important;
+        gap:10px !important;
         justify-content: center !important;
     }
 
@@ -2493,6 +2493,7 @@ body.dark-mode .mobile-nav-item.active {
 
    .language-selector{
     border: 1px solid white !important;
+    margin: 0px !important;
    }
 
     .logo {
