--- a/estilos4sfgcat.css
+++ b/estilos4sfgcat.css
@@ -2509,8 +2509,8 @@ body.dark-mode .mobile-nav-item.active {
     }
 
     .language-btn {
-        padding: 0.2rem 0.5rem !important;
-        margin-right: 0px !important;
+        padding: 0px !important;
+        margin: 0px !important;
         font-size: 1rem !important;
         min-width: 30px !important;
         min-height: 30px !important;
