--- a/estilos4sfgcat.css
+++ b/estilos4sfgcat.css
@@ -2484,4 +2484,67 @@ body.dark-mode .mobile-nav-item.active {
             min-width: 70px;
             padding: 0.75rem;
         }
+        #with-automation {
+            font-size: 1rem;
+        }
+        #losing{
+            font-size: 1rem;
+        }
 }
+
+footer {
+    background-color: #333;
+    color: white;
+    padding: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 15px;
+}
+
+.social-links {
+    display: flex;
+    gap: 15px;
+}
+
+.social-links a {
+    display: inline-block;
+    transition: transform 0.3s ease;
+}
+
+.social-links a:hover {
+    transform: scale(1.1);
+}
+
+.social-links svg {
+    width: 30px;
+    height: 30px;
+    fill: white;
+}
+
+.social-links a:hover svg {
+    fill: #4267B2; /* Color de Facebook */
+}
+
+.social-links a:nth-child(2):hover svg {
+    fill: #0077B5; /* Color de LinkedIn */
+}
+
+footer p {
+    margin: 0;
+    flex: 1;
+    text-align: center;
+}
+
+@media (max-width: 768px) {
+    footer {
+        flex-direction: column;
+        text-align: center;
+    }
+    
+    footer p {
+        text-align: center;
+    }
+}
+
